--- a/index.css
+++ b/index.css
@@ -59,6 +59,19 @@ body {
 /* this style (.lp-containerDisplay) is written here just for me to see better where i should put the footer morizz you can change it if its needed */
 .lp-containerDisplay {
     height: 100vh;
+    display: flex;
+    margin: 0 5%;
+}
+
+.lp-containerDisplay .nil,
+.lp-containerDisplay .mo,
+.lp-containerDisplay .pau {
+  flex: 1;
+  margin: 30px; /* Adjust the margin as needed */
+  border: solid 3px #200344;
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 /* landing page style ends here*/
@@ -72,9 +85,10 @@ body {
 
 
 #MoToDoContainer {
-    padding: 2rem 2rem;
-    margin: 1rem 10rem;
+    padding: 2rem 1rem;
+    margin: 1rem 1rem;
     height: fit-content;
+    width: 100%;
 }
 
 #moSectionHeader {
@@ -128,6 +142,7 @@ body {
     border-radius: 30px;
     background-color:  hsla(195, 33%, 44%, 0.741);
     height: fit-content;
+    margin:0 1rem;
 }
 
 #moToDoDisplayPrivate{
@@ -135,7 +150,7 @@ body {
     border-radius: 30px;
     background-color: hsla(61, 78%, 33%, 0.741);
     height: fit-content;
-
+    margin:0 1rem;
 }
 /*--------------------------------------------------------inside FooterSection                                    */
 
