--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 
 body {
     height: 100vh;
-    background-image: url(../todo/images/bgImg.jpg);
+    background-image: url(/images/bgImg.jpg);
     background-position: 50% 50%;
     background-size: cover;
 }
@@ -45,7 +45,7 @@ body {
 }
 
 #lp-footer {
-     padding: 1rem 0.9rem;
+    padding: 1rem 0.9rem;
     background-color: #76B0DA;
     color: #200344;
     text-align: center;
@@ -64,12 +64,13 @@ body {
 .lp-containerDisplay .nil,
 .lp-containerDisplay .mo,
 .lp-containerDisplay .pau {
-  flex: 1;
-  margin: 30px; /* Adjust the margin as needed */
-  border: solid 3px #200344;
-  border-radius: 20px;
-  align-items: center;
-  justify-content: center;
+    flex: 1;
+    margin: 30px;
+    /* Adjust the margin as needed */
+    border: solid 3px #200344;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 /* landing page style ends here*/
@@ -77,7 +78,7 @@ body {
 /* MORITZ CODE */
 
 /*-------------------------------------------------------------------Sections                                               */
-.mo{
+.mo {
     margin-bottom: 1rem;
 }
 
@@ -90,11 +91,11 @@ body {
 }
 
 #moSectionHeader {
-    border-radius:30px;
+    border-radius: 30px;
     padding: 1rem 0;
     text-align: center;
-    background: linear-gradient(80deg, rgba(218,214,33,1) 0%, rgba(75,131,149,1) 100%);
-    text-shadow:white 1px 1px;
+    background: linear-gradient(80deg, rgba(218, 214, 33, 1) 0%, rgba(75, 131, 149, 1) 100%);
+    text-shadow: white 1px 1px;
 }
 
 #moSectionMain {
@@ -103,62 +104,64 @@ body {
     /* border: solid green 1px; */
     display: flex;
     justify-content: space-around;
-    text-shadow:white 1px 1px;
+    text-shadow: white 1px 1px;
 }
 
 #moSectionFooter {
     /* border: solid purple 1px; */
     text-align: center;
 }
+
 /*---------------------------------------------------------inside HeaderSection*/
-.moHOnes{
+.moHOnes {
     font-size: 2rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.moPs{
+.moPs {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
 }
 
-.moInstructionCont{
+.moInstructionCont {
     display: flex;
     justify-content: space-between;
     padding: 0 2rem;
     align-items: center;
 }
 
-.moPInstructions{
+.moPInstructions {
     font-size: small;
     font-weight: 600;
 
 }
 
 /*---------------------------------------------------------inside MainSection                                    */
-#moToDoDisplayWork{
+#moToDoDisplayWork {
     border: solid rgb(62, 185, 194) 5px;
     border-radius: 30px;
-    background-color:  hsla(195, 33%, 44%, 0.741);
+    background-color: hsla(195, 33%, 44%, 0.741);
     height: fit-content;
-    margin:0 1rem;
+    margin: 0 1rem;
 }
 
-#moToDoDisplayPrivate{
+#moToDoDisplayPrivate {
     border: solid rgb(218, 214, 33) 5px;
     border-radius: 30px;
     background-color: hsla(61, 78%, 33%, 0.741);
     height: fit-content;
-    margin:0 1rem;
+    margin: 0 1rem;
 }
+
 /*--------------------------------------------------------inside FooterSection                                    */
 
-.moPFooter{
+.moPFooter {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin:0;
+    margin: 0;
     margin-top: 1rem;
 }
 
-.moGitImg{
+.moGitImg {
     max-height: 2rem;
     max-width: 2rem;
     border-radius: 50%;
@@ -166,85 +169,85 @@ body {
 
 /*--------------------------------------------------------inside ToDoDisplays                                    */
 /*----------------------both                                                               */
-.moToDoDisplays{
+.moToDoDisplays {
     padding: 0.3rem 0.3rem;
 }
 
-.moHTwos{
+.moHTwos {
     margin: 0.2rem 0;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.moToDoDisplayForms{
+.moToDoDisplayForms {
     padding: 0 0.2rem;
 }
 
-.moHThrees{
+.moHThrees {
     margin: 0.2rem 0;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.moToDoDisplayLists{
-margin-block: 0;
-padding-inline: 0;
-list-style: none;
+.moToDoDisplayLists {
+    margin-block: 0;
+    padding-inline: 0;
+    list-style: none;
 }
 
 /*----------------------Buttons                                                              */
-.moCreatedListItemButtonContainer{
+.moCreatedListItemButtonContainer {
     display: flex;
     align-items: center;
     margin-right: 0.3rem;
 }
 
-.moButtonDone{
-height: 1rem;
-width: 1rem;
-border-radius: 50%;
-border: solid 1px green;
-background-color: hsl(120, 61%, 56%);
+.moButtonDone {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    border: solid 1px green;
+    background-color: hsl(120, 61%, 56%);
 }
 
-.moButtonEdit{
-margin: 0 0.2rem;
-height: 1rem;
-width: 1rem;
-border-radius: 50%;
-border: solid 1px royalblue;
-background-color: hsl(225, 66%, 74%);
+.moButtonEdit {
+    margin: 0 0.2rem;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    border: solid 1px royalblue;
+    background-color: hsl(225, 66%, 74%);
 }
 
-.moButtonDel{
-height: 1rem;
-width: 1rem;
-border-radius: 50%;
-border: solid 1px red;
-background-color: hsl(0, 79%, 68%);
+.moButtonDel {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    border: solid 1px red;
+    background-color: hsl(0, 79%, 68%);
 }
 
 /*----------------------workToDo                                                               */
-.moCreatedListItemWork{
+.moCreatedListItemWork {
     display: flex;
     height: 2rem;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     border: solid 2px rgb(89, 159, 182);
     background-color: hsla(195, 53%, 79%, 0.74);
     border-radius: 30px;
     margin: 0.3rem 0;
-    
+
 }
 
-.moCreatedListItemWorkP{
+.moCreatedListItemWorkP {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     font-size: 0.8rem;
     margin-left: 0.3rem;
 }
 
-#moToDoDisplayFormWork{
+#moToDoDisplayFormWork {
     display: flex;
     justify-content: space-between;
     padding: 0.2rem 0.2rem;
@@ -253,43 +256,44 @@ background-color: hsl(0, 79%, 68%);
     border-radius: 30px;
 }
 
-#moToDoDisplayFormWork > input {
+#moToDoDisplayFormWork>input {
     max-width: 60%;
-    border:solid 2px rgb(89, 159, 182); 
+    border: solid 2px rgb(89, 159, 182);
     border-radius: 30px;
-    background-color:  hsla(0, 0%, 100%, 0.74);
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: hsla(0, 0%, 100%, 0.74);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: x-small;
     font-weight: 600;
 }
+
 #moToDoTextInputWork {
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
     margin-left: 0.3rem;
-    
+
 }
 
 /*----------------------PrivateToDo                                                               */
-.moCreatedListItemPrivate{
+.moCreatedListItemPrivate {
     display: flex;
     height: 2rem;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     border: solid 2px rgb(163, 161, 37);
     background-color: hsla(61, 85%, 48%, 0.74);
     border-radius: 30px;
     margin: 0.3rem 0;
-    
+
 }
 
-.moCreatedListItemPrivateP{
+.moCreatedListItemPrivateP {
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600; 
+    font-weight: 600;
     font-size: 0.8rem;
     margin-left: 0.3rem;
 }
 
-#moToDoDisplayFormPrivate{
+#moToDoDisplayFormPrivate {
     display: flex;
     justify-content: space-between;
     padding: 0.2rem 0.2rem;
@@ -298,15 +302,16 @@ background-color: hsl(0, 79%, 68%);
     border-radius: 30px;
 }
 
-#moToDoDisplayFormPrivate > input {
+#moToDoDisplayFormPrivate>input {
     max-width: 60%;
     border: solid 2px rgb(163, 161, 37);
     border-radius: 30px;
     background-color: hsla(0, 0%, 100%, 0.74);
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: x-small;
     font-weight: 600;
 }
+
 #moToDoTextInputPrivate {
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
@@ -315,6 +320,172 @@ background-color: hsl(0, 79%, 68%);
 
 /* NILOUFAR CODE */
 
+.nilContainer {
+    width: 100%;
+    height: 100vh;
+
+    padding: 10px;
+}
+
+.nilFormContainer {
+    width: 100%;
+    padding: 2.5rem 1.875rem 0 2.5rem;
+    background: #0060BF;
+    border-bottom: #20bf00 1px solid;
+
+}
+
+.nilTodoApp {
+    width: 100%;
+    max-width: 33.75rem;
+    background: #fff;
+    margin: 6.25rem auto 1.25rem;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+}
+
+.nilRow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.nilRow input:focus::placeholder {
+    color: transparent;
+}
+
+.nilRow select,
+.nilRow input {
+    padding: 1.6rem;
+    border: 1px solid;
+    outline: none;
+    flex: 1;
+    background: transparent;
+    color: #fff;
+    font-size: 1rem;
+}
+
+.nilRow select {
+
+    border-left: none;
+    cursor: pointer;
+}
+
+.nilRow select::after {
+    padding-right: 15px;
+}
+
+.nilRow select option {
+    color: #153677;
+    padding: 0.4rem;
+}
+
+.nilRow input::placeholder {
+    color: #fff;
+}
+
+.nilAddBtn {
+    border: none;
+    outline: 2px solid #fff;
+    width: 3rem;
+    height: 3rem;
+    background-color: #0060BF;
+    color: #fff;
+    border-radius: 50%;
+    font-size: 32px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.nilAddBtn:hover {
+    color: #0060BF;
+    background-color: #fff;
+    border: 2px solid #0060BF;
+}
+
+.nilBtnContainer {
+    height: 10px;
+    text-align: center;
+    position: relative;
+    bottom: 13px;
+}
+
+.nilListContainer {
+    padding: 2.5rem 1.875rem 2.5rem 2.5rem;
+}
+
+.nilListContainer ul li {
+    list-style: none;
+    font-size: 1.1rem;
+    padding: 0.7rem 0.5rem 0.7rem 3.1rem;
+    margin-bottom: 0.2rem;
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+}
+
+.nilListContainer ul li::before {
+    content: '';
+    position: absolute;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    background-image: url(../images/unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top: 8px;
+    left: 8px;
+
+}
+
+.nilListContainer ul li.nilChecked {
+    color: #555;
+    text-decoration: line-through;
+    border-left: 7px solid #258D2D;
+    border-bottom: 1px solid #258D2D;
+}
+
+.nilListContainer ul li.nilChecked::before {
+    background-image: url(../images/checked.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.nilListContainer ul li.nilNormal {
+    border-left: 7px solid #007bff;
+    border-bottom: 1px solid #007bff;
+}
+
+.nilListContainer ul li.nilImportant {
+    border-left: 7px solid #ffc107;
+    border-bottom: 1px solid #ffc107;
+}
+
+.nilListContainer ul li.nilUrgent {
+    border-left: 7px solid #dc3545;
+    border-bottom: 1px solid #dc3545;
+}
+
+.nilListContainer ul li span {
+    position: absolute;
+    right: 0;
+    top: 6px;
+    width: 28px;
+    height: 28px;
+    font-size: 22px;
+    color: #818282;
+    text-align: center;
+    border-radius: 50%;
+    line-height: 28px;
+    outline: 3px solid #DDDDDD;
+}
+
+.nilListContainer ul li span:hover {
+    background-color: #dc3545;
+    color: #fff;
+    outline: 3px solid #fff;
+}
 
 
 /* PAUL CODE */
