--- a/css/pau.css
+++ b/css/pau.css
@@ -91,13 +91,13 @@ form.pa_form button:hover {
   opacity: 0;
 }
 
-.completed {
+.pa_completed {
   text-decoration: line-through;
   opacity: 0.5;
 }
 
 /*CUSTOM SELECTOR */
-select {
+select.pa_filter {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
@@ -109,19 +109,19 @@ select {
 }
 
 /* Custom Select */
-.select {
+.pa_select {
   margin: 1rem;
   position: relative;
   overflow: hidden;
 }
-select {
+select.pa_filter {
   color: #ff6f47;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   width: 12rem;
 }
 /* Arrow */
-.select::after {
+.pa_select::after {
   content: "\25BC";
   position: absolute;
   top: 0;
